tests/sema/valid/shadowing.vit
proc main() -> int {
  let argc = 2;
  if true {
    let value = argc;
  }
  give argc;
}
