tests/sema/invalid/unknown_symbol.vit
proc main() -> int {
  let count = 1;
  give cout;
}
